# termchan

./: Cargo.toml
entity/: Cargo.toml
migration/: Cargo.toml
termchan-core/: Cargo.toml
termchan-tui/: Cargo.toml
