[package]
name = "termchan"
version = "0.0.3"
edition = "2021"
authors = ["Haryoiro"]
license = "Apache-2.0"

[dependencies]
termchan-core = {path ="./termchan-core"}
termchan-tui = {path ="./termchan-tui"}
tokio = { version = "1.20.4", features = ["full"] }

[[bin]]
name = "termchan"
path = "./termchan-tui/src/bin/termchan.rs"

[workspace]
members = ["termchan-core", "termchan-tui", "entity", "migration"]

[profile.dev]
debug = true

[profile.release]
opt-level = 3
lto = true
debug = false
overflow-checks = false

[profile.test]
opt-level = 3
debug = true
