[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
async-trait =  "0.1.57"
sea-orm = "0.12.3"
directories = "4.0.1"

[dependencies.sea-orm-migration]
version = "^0.9.1"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
