[package]
name = "termchan-core"
version = "0.2.0"
edition = "2021"
authors = ["Haryoiro"]
license = "Apache-2.0"

[dependencies]
unicode-segmentation = "1.9.0"
anyhow = "1.0.62"
chrono = "0.4.22"
chrono-tz = "0.6.3"
encoding_rs = "0.8.31"
futures = "0.3.23"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["gzip", "cookies", "json"] }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.79"
tokio = { version = "1.20.4", features = ["full"] }
url = "2.2.2"
once_cell = "1.13.0"
eyre = "0.6.8"
rayon = "1.5.3"

[dependencies.sea-orm]
version = "0.9.1"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
default-features = false
