[package]
name = "termchan-tui"
version = "0.1.0"
edition = "2021"


[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
eyre = "0.6.8"
crossterm = { version = "0.25.0", features = ["serde"] }
once_cell = "1.13.0"
tui = { version = "0.19.0", features = ["serde", "termion"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.82"
termchan-core = { path = "../termchan-core" }
anyhow = "1.0.62"
tokio = { version = "1.20.4", features = ["full"] }
clap = { version = "3.2.17" }
futures = "0.3.23"
termion-input-tokio = "0.3.0"
termion = "1.5.6"
chrono = "0.4.22"
chrono-tz = "0.6.3"
dotenv = "0.15.0"
rayon = "1.5.3"
unicode-width = "0.1.9"
derive_more = "0.99.17"
reqwest = "0.11.11"
tui-textarea = {version = "0.1.5", features = ["termion"]}
log4rs = { version = "1.1.1" }
log = { version = "0.4.17" }
directories = { version = "4.0.1" }
keyring = { version = "1.2.0" }

[dependencies.sea-orm]
default-features = false
version = "0.9.1"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
